syntax = "proto3";

package management;

// This option is used to set the default error response for all Swagger APIs generated from this file.
// See also header.json.
// It has to be copy&pasted into each file.
option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  responses: {
    key: "default"
    value: {
      description: "An error response."
      schema: {
        json_schema: {
          ref: "#/definitions/managementpbErrorResponse"
        }
      }
    }
  }
};
option go_package = "managementpb";

import "google/api/annotations.proto";
import "inventorypb/agents.proto";
import "inventorypb/nodes.proto";
import "inventorypb/services.proto";
import "protoc-gen-swagger/options/annotations.proto";

// DiscoverRDSEngine describes supported RDS instance engines.
enum DiscoverRDSEngine {
  DISCOVER_RDS_ENGINE_INVALID = 0;
  DISCOVER_RDS_MYSQL = 1;
}

// DiscoverRDSInstance models an unique RDS instance for the list of instances returned by Discovery.
message DiscoverRDSInstance {
  // AWS region.
  string region = 1;
  // AWS instance ID.
  string instance_id = 2;
  // Address used to connect to it.
  string address = 3;
  // Instance engine.
  DiscoverRDSEngine engine = 4;
  // Engine version.
  string engine_version = 5;
  // TODO https://jira.percona.com/browse/PMM-4314
  // string az = 6;
  // string instance_class = 7;

}

message DiscoverRDSRequest {
  // AWS Access key. Optional.
  string aws_access_key = 1;
  // AWS Secret key. Optional.
  string aws_secret_key = 2;
}

message DiscoverRDSResponse {
  repeated DiscoverRDSInstance rds_instances = 1;
}

message AddRDSRequest {
  // TODO

}

message AddRDSResponse {
  inventory.RemoteRDSNode node = 1;
  inventory.RDSExporter rds_exporter = 2;
  inventory.MySQLService service = 3;
  inventory.MySQLdExporter mysqld_exporter = 4;
  inventory.QANMySQLPerfSchemaAgent qan_mysql_perfschema = 5;
  // Actual table count at the moment of adding.
  int32 table_count = 6;
}

// RDS service provides Node and Service Discovery APIs.
service RDS {
  // DiscoverRDS discovers RDS instances.
  rpc DiscoverRDS(DiscoverRDSRequest) returns (DiscoverRDSResponse) {
    option (google.api.http) = {
      post: "/v1/management/RDS/Discover"
      body: "*"
    };
  }
  // AddRDS adds RDS instance.
  rpc AddRDS(AddRDSRequest) returns (AddRDSResponse) {
    option (google.api.http) = {
      post: "/v1/management/RDS/Add"
      body: "*"
    };
  }
}
